# AI-General-Framework

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  run_ingest_memories.py  test_base_agent.py  test_base_agent_healthcare_langfuse.py  test_base_agent_mem0_service.py  test_langfuse.py
.github/workflows/: dev_build.yml  tests.yml  type_check.yml
agents/assistant/: adk_client.py  adk_tool_client.py  agent copy.py  agent.py  api_server.py  config.py  memory.py  prompts.py  rag.py
agents/assistant/ingest/: config.py  models.py  pipeline.py  utils.py
agents/assistant/ingest/sinks/: base.py  chroma_sink.py  mem0_sink.py  neo4j_sink.py
agents/assistant/ingest/sources/: base.py  json_roadmap.py  pdf_pymupdf.py
agents/assistant/prompts/: prompt.py
agents/assistant/retrievers/: chroma_retriever.py
agents/assistant/tools/: agent_tools.py  base_tool.py  builtin_tools.py  external_loader.py  registry.py  tool_loader.py
agents/assistant/tools/box/: mem0_tools.py
alembic/: env.py
app/: main.py
app/core/: config.py
gateway/docling/: __init__.py  converter.py  docling_settings.yaml  options.py  plugins.py  service.py  settings.py  storage.py  types.py
gateway/mem0/: Dockerfile  config.py  memory.py  service.py
gateway/mem0/OFFICIAL-DOCS/: 01-introduction.md  02-core-concepts-memory-types.md  03-memory-operations-search.md  04-platform-overview.md  05-open-source-overview.md  06-faqs.md  README.md  SITE-STRUCTURE-REFERENCE.md
gateway/mem0/ingest/: models.py
gateway/mem0/ingest/sinks/: base.py  chroma_sink.py  mem0_sink.py  neo4j_sink.py
gateway/mem0/rag/: rag.py
gateway/mem0/retrievers/: chroma_retriever.py
mcp_server/: math_mcp_server.py
utilities/a2a/: agent_connector.py  agent_discovery.py
utilities/base/: __init__.py  base_agent.py  base_embedding.py  base_file.py  base_instructor.py  base_llm.py  prompt_manager.py
utilities/common/: file_manager.py
utilities/mcp/: mcp_config.py  mcp_connect.py  mcp_discovery.py
workshop/assistant/: adk_tool_client.py  agent.py  api_server.py  setting.py
workshop/assistant/ingest/: pipeline.py
workshop/assistant/ingest/sources/: base.py  json_roadmap.py
workshop/assistant/prompts/: personas.py  prompt.py
workshop/assistant/tools/: registry.py  tool_loader.py
workshop/grokfilter/: cli.py  report_generator.py  visualizer.py
workshop/grokfilter/advisor/: precise_advisor.py
workshop/grokfilter/core/: chebyshev.py  min_n_estimator.py  zero_optimizer.py
workshop/grokfilter/examples/: 2300MHz_spec.yaml  user_preference.txt
workshop/grokfilter/explainer/: solution_explainer.py
workshop/grokfilter/extractor/: spec_extractor.py
workshop/grokfilter/models/: solution.py  spec.py
workshop/grokfilter/synthesizer/: multi_solution.py
